--- a/sunday-sites/travels/assets/css/style.css
+++ b/sunday-sites/travels/assets/css/style.css
@@ -13,7 +13,15 @@ h2 {
 }
 
 h4 {
-    margin: 0 0 10px 3px;
+    margin: 0;
+    padding: 2px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 6px;
+    font-weight: 400;
 }
 
 #arriba {
@@ -115,38 +123,27 @@ h4 {
     background-color: snow;
 }
 
+#Gaillon {
+    background-color: darkolivegreen;
+}
+
 .index {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 0 20px 0;
-}
-
-.content {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    flex-wrap: wrap;
-}
-
-.block {
-    min-width: 90px;
-    border: 1px solid black;
-    border-width: 0 0px 1px 1px;
-    margin: 0px;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.cities>div>span,
-.firm span {
-    opacity: 0;
-    width: 100%;
+    margin: 20px 0 10px 0;
+    border-top: 1px solid black;
+    padding-top: 20px;
     text-align: center;
 }
 
-.cities>div>span:hover,
-.firm span:hover {
-    opacity: 1;
+.content {}
+
+.block {
+    display: flex;
+}
+
+.cities {
+    display: flex;
 }
 
 .city {
@@ -162,4 +159,7 @@ h4 {
 .firm {
     color: white;
     margin: 20px 0 10px 0;
+    border-top: 1px solid black;
+    padding-top: 20px;
+    text-align: center;
 }
