--- a/nieuwe/assets/css/output.css
+++ b/nieuwe/assets/css/output.css
@@ -7,27 +7,21 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-amber-800: oklch(47.3% 0.137 46.201);
-    --color-amber-950: oklch(27.9% 0.077 45.635);
-    --color-green-400: oklch(79.2% 0.209 151.711);
-    --color-green-500: oklch(72.3% 0.219 149.579);
+    --color-amber-900: oklch(41.4% 0.112 45.904);
+    --color-yellow-200: oklch(94.5% 0.129 101.54);
+    --color-yellow-300: oklch(90.5% 0.182 98.111);
+    --color-yellow-600: oklch(68.1% 0.162 75.834);
     --color-green-600: oklch(62.7% 0.194 149.214);
-    --color-blue-500: oklch(62.3% 0.214 259.815);
-    --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
     --color-purple-500: oklch(62.7% 0.265 303.9);
     --color-purple-600: oklch(55.8% 0.288 302.321);
-    --color-slate-300: oklch(86.9% 0.022 252.894);
-    --color-slate-400: oklch(70.4% 0.04 256.788);
+    --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-zinc-200: oklch(92% 0.004 286.32);
-    --color-zinc-950: oklch(14.1% 0.005 285.823);
     --color-black: #303030;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --text-xs: 0.75rem;
-    --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -39,11 +33,9 @@
     --font-weight-normal: 400;
     --font-weight-semibold: 600;
     --leading-tight: 1.25;
-    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
-    --radius-3xl: 1.5rem;
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --aspect-video: 16 / 9;
@@ -210,6 +202,9 @@
   .pointer-events-none {
     pointer-events: none;
   }
+  .visible {
+    visibility: visible;
+  }
   .absolute {
     position: absolute;
   }
@@ -225,8 +220,14 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-\[50px\] {
+    top: 50px;
+  }
   .top-\[50vh\] {
     top: 50vh;
+  }
+  .top-\[calc\(50vh-30px\)\] {
+    top: calc(50vh - 30px);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -234,14 +235,8 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
-  .bottom-2 {
-    bottom: calc(var(--spacing) * 2);
-  }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .left-2 {
-    left: calc(var(--spacing) * 2);
   }
   .z-0 {
     z-index: 0;
@@ -261,20 +256,11 @@
   .z-50 {
     z-index: 50;
   }
-  .col-span-1 {
-    grid-column: span 1 / span 1;
-  }
   .col-span-2 {
     grid-column: span 2 / span 2;
   }
-  .col-span-3 {
-    grid-column: span 3 / span 3;
-  }
   .col-span-4 {
     grid-column: span 4 / span 4;
-  }
-  .col-span-5 {
-    grid-column: span 5 / span 5;
   }
   .container {
     width: 100%;
@@ -303,14 +289,17 @@
   .mx-auto {
     margin-inline: auto;
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
-  }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
   .mb-12 {
     margin-bottom: calc(var(--spacing) * 12);
+  }
+  .mb-\[25vh\] {
+    margin-bottom: 25vh;
+  }
+  .mb-\[50vh\] {
+    margin-bottom: 50vh;
   }
   .block {
     display: block;
@@ -324,6 +313,18 @@
   .hidden {
     display: none;
   }
+  .inline {
+    display: inline;
+  }
+  .inline-block {
+    display: inline-block;
+  }
+  .inline-flex {
+    display: inline-flex;
+  }
+  .table {
+    display: table;
+  }
   .aspect-4\/3 {
     aspect-ratio: 4/3;
   }
@@ -333,21 +334,9 @@
   .aspect-video {
     aspect-ratio: var(--aspect-video);
   }
-  .size-2 {
-    width: calc(var(--spacing) * 2);
-    height: calc(var(--spacing) * 2);
-  }
-  .size-4 {
-    width: calc(var(--spacing) * 4);
-    height: calc(var(--spacing) * 4);
-  }
   .size-5 {
     width: calc(var(--spacing) * 5);
     height: calc(var(--spacing) * 5);
-  }
-  .size-6 {
-    width: calc(var(--spacing) * 6);
-    height: calc(var(--spacing) * 6);
   }
   .h-3 {
     height: calc(var(--spacing) * 3);
@@ -355,8 +344,20 @@
   .h-\[25px\] {
     height: 25px;
   }
-  .h-\[200vh\] {
-    height: 200vh;
+  .h-\[30pc\] {
+    height: 30pc;
+  }
+  .h-\[30px\] {
+    height: 30px;
+  }
+  .h-\[120\%\] {
+    height: 120%;
+  }
+  .h-\[140\%\] {
+    height: 140%;
+  }
+  .h-auto {
+    height: auto;
   }
   .h-fit {
     height: fit-content;
@@ -364,44 +365,29 @@
   .h-full {
     height: 100%;
   }
-  .h-max {
-    height: max-content;
-  }
-  .h-min {
-    height: min-content;
-  }
-  .h-screen {
-    height: 100vh;
-  }
-  .min-h-\[1o0vh\] {
-    min-height: 1o0vh;
-  }
-  .min-h-\[50vh\] {
-    min-height: 50vh;
-  }
-  .min-h-\[100vh\] {
+  .min-h-screen {
     min-height: 100vh;
   }
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
-  .w-\[60px\] {
-    width: 60px;
+  .w-\[30px\] {
+    width: 30px;
   }
   .w-\[70px\] {
     width: 70px;
   }
+  .w-\[80\%\] {
+    width: 80%;
+  }
   .w-\[80px\] {
     width: 80px;
   }
-  .w-\[100px\] {
-    width: 100px;
-  }
-  .w-\[450px\] {
-    width: 450px;
-  }
   .w-\[500px\] {
     width: 500px;
+  }
+  .w-auto {
+    width: auto;
   }
   .w-fit {
     width: fit-content;
@@ -409,26 +395,26 @@
   .w-full {
     width: 100%;
   }
-  .max-w-\[200px\] {
-    max-width: 200px;
-  }
   .max-w-\[250px\] {
     max-width: 250px;
   }
-  .max-w-\[300px\] {
-    max-width: 300px;
-  }
   .max-w-\[350px\] {
     max-width: 350px;
-  }
-  .max-w-\[400px\] {
-    max-width: 400px;
   }
   .max-w-\[calc\(100vw-16px\)\] {
     max-width: calc(100vw - 16px);
   }
   .max-w-full {
     max-width: 100%;
+  }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
+  .flex-grow {
+    flex-grow: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .-rotate-3 {
     rotate: calc(3deg * -1);
@@ -445,6 +431,9 @@
   .cursor-pointer {
     cursor: pointer;
   }
+  .resize {
+    resize: both;
+  }
   .scroll-mt-8 {
     scroll-margin-top: calc(var(--spacing) * 8);
   }
@@ -456,12 +445,6 @@
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-  .grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-  .grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
   .grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
@@ -475,11 +458,17 @@
   .flex-col-reverse {
     flex-direction: column-reverse;
   }
+  .content-center {
+    align-content: center;
+  }
   .items-center {
     align-items: center;
   }
   .items-end {
     align-items: flex-end;
+  }
+  .items-start {
+    align-items: flex-start;
   }
   .justify-between {
     justify-content: space-between;
@@ -489,9 +478,6 @@
   }
   .justify-end {
     justify-content: flex-end;
-  }
-  .justify-items-end {
-    justify-items: end;
   }
   .gap-0 {
     gap: calc(var(--spacing) * 0);
@@ -511,23 +497,29 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
-  }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
   }
+  .gap-\[50vh\] {
+    gap: 50vh;
+  }
+  .gap-\[calc\(50vh-30px\)\] {
+    gap: calc(50vh - 30px);
+  }
+  .overflow-auto {
+    overflow: auto;
+  }
   .overflow-hidden {
     overflow: hidden;
+  }
+  .overflow-visible {
+    overflow: visible;
   }
   .scroll-smooth {
     scroll-behavior: smooth;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
-  }
-  .rounded-\[4px\] {
-    border-radius: 4px;
   }
   .rounded-\[6px\] {
     border-radius: 6px;
@@ -555,11 +547,23 @@
   .border-grey {
     border-color: var(--color-grey);
   }
+  .bg-\[\#0000FF\] {
+    background-color: #0000FF;
+  }
+  .bg-\[\#3F0200\] {
+    background-color: #3F0200;
+  }
+  .bg-\[\#11C3FF\] {
+    background-color: #11C3FF;
+  }
   .bg-\[\#35C759\] {
     background-color: #35C759;
   }
   .bg-\[\#E6E6E6\] {
     background-color: #E6E6E6;
+  }
+  .bg-\[\#EAEAEA\] {
+    background-color: #EAEAEA;
   }
   .bg-\[\#F9F9F9\] {
     background-color: #F9F9F9;
@@ -567,8 +571,14 @@
   .bg-\[\#FAF5A2\] {
     background-color: #FAF5A2;
   }
+  .bg-\[yellow-600\] {
+    background-color: yellow-600;
+  }
   .bg-amber-800 {
     background-color: var(--color-amber-800);
+  }
+  .bg-amber-900 {
+    background-color: var(--color-amber-900);
   }
   .bg-black {
     background-color: var(--color-black);
@@ -579,9 +589,6 @@
   .bg-green-600 {
     background-color: var(--color-green-600);
   }
-  .bg-purple-500 {
-    background-color: var(--color-purple-500);
-  }
   .bg-purple-600 {
     background-color: var(--color-purple-600);
   }
@@ -591,6 +598,15 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-yellow-200 {
+    background-color: var(--color-yellow-200);
+  }
+  .bg-yellow-300 {
+    background-color: var(--color-yellow-300);
+  }
+  .bg-yellow-600 {
+    background-color: var(--color-yellow-600);
+  }
   .bg-linear-to-b {
     --tw-gradient-position: to bottom;
     @supports (background-image: linear-gradient(in lab, red, red)) {
@@ -598,9 +614,52 @@
     }
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .bg-linear-to-r {
+    --tw-gradient-position: to right;
+    @supports (background-image: linear-gradient(in lab, red, red)) {
+      --tw-gradient-position: to right in oklab;
+    }
+    background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .from-\[\#00000\] {
+    --tw-gradient-from: #00000;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[\#000000\] {
+    --tw-gradient-from: #000000;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[\#EAEAEA\] {
+    --tw-gradient-from: #EAEAEA;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .from-grad-black {
     --tw-gradient-from: var(--color-grad-black);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-10\% {
+    --tw-gradient-from-position: 10%;
+  }
+  .from-30\% {
+    --tw-gradient-from-position: 30%;
+  }
+  .from-50\% {
+    --tw-gradient-from-position: 50%;
+  }
+  .from-60\% {
+    --tw-gradient-from-position: 60%;
+  }
+  .from-65\% {
+    --tw-gradient-from-position: 65%;
+  }
+  .from-70\% {
+    --tw-gradient-from-position: 70%;
+  }
+  .from-80\% {
+    --tw-gradient-from-position: 80%;
+  }
+  .from-90\% {
+    --tw-gradient-from-position: 90%;
   }
   .to-transparent {
     --tw-gradient-to: transparent;
@@ -614,9 +673,6 @@
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
-  }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
@@ -636,20 +692,44 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
-  .pt-20 {
-    padding-top: calc(var(--spacing) * 20);
+  .pt-\[45vh\] {
+    padding-top: 45vh;
   }
-  .pt-\[50\%\] {
-    padding-top: 50%;
+  .pt-\[47vh\] {
+    padding-top: 47vh;
+  }
+  .pt-\[48vh\] {
+    padding-top: 48vh;
   }
   .pt-\[50vh\] {
     padding-top: 50vh;
   }
-  .pt-\[60\%\] {
-    padding-top: 60%;
+  .pt-\[calc\(50vh-15px\)\] {
+    padding-top: calc(50vh - 15px);
+  }
+  .pt-\[calc\(50vh-30px\)\] {
+    padding-top: calc(50vh - 30px);
+  }
+  .pr-10 {
+    padding-right: calc(var(--spacing) * 10);
+  }
+  .pb-4 {
+    padding-bottom: calc(var(--spacing) * 4);
   }
   .pb-20 {
     padding-bottom: calc(var(--spacing) * 20);
+  }
+  .pb-\[50vh\] {
+    padding-bottom: 50vh;
+  }
+  .pb-\[100vh\] {
+    padding-bottom: 100vh;
+  }
+  .pb-\[calc\(50vh-30px\)\] {
+    padding-bottom: calc(50vh - 30px);
+  }
+  .pb-\[q00vh\] {
+    padding-bottom: q00vh;
   }
   .text-center {
     text-align: center;
@@ -670,11 +750,11 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
+  .text-\[8px\] {
+    font-size: 8px;
+  }
   .text-\[12px\] {
     font-size: 12px;
-  }
-  .text-\[14px\] {
-    font-size: 14px;
   }
   .text-\[80px\] {
     font-size: 80px;
@@ -690,13 +770,15 @@
     --tw-leading: var(--leading-tight);
     line-height: var(--leading-tight);
   }
-  .font-normal {
-    --tw-font-weight: var(--font-weight-normal);
-    font-weight: var(--font-weight-normal);
-  }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
+  }
+  .text-\[\#FF3D00\] {
+    color: #FF3D00;
+  }
+  .text-\[\#FFFF2A\] {
+    color: #FFFF2A;
   }
   .text-black {
     color: var(--color-black);
@@ -716,8 +798,15 @@
   .text-white {
     color: var(--color-white);
   }
+  .text-yellow-600 {
+    color: var(--color-yellow-600);
+  }
   .underline {
     text-decoration-line: underline;
+  }
+  .antialiased {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
   .opacity-0 {
     opacity: 0%;
@@ -728,6 +817,14 @@
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
+  .backdrop-filter {
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -755,6 +852,14 @@
   .duration-400 {
     --tw-duration: 400ms;
     transition-duration: 400ms;
+  }
+  .ease-in-out {
+    --tw-ease: var(--ease-in-out);
+    transition-timing-function: var(--ease-in-out);
+  }
+  .ease-out {
+    --tw-ease: var(--ease-out);
+    transition-timing-function: var(--ease-out);
   }
   .group-hover\:hidden {
     &:is(:where(.group):hover *) {
@@ -803,6 +908,13 @@
       background-color: var(--color-grey);
     }
   }
+  .hover\:w-\[100px\] {
+    &:hover {
+      @media (hover: hover) {
+        width: 100px;
+      }
+    }
+  }
   .hover\:scale-102 {
     &:hover {
       @media (hover: hover) {
@@ -823,6 +935,28 @@
       }
     }
   }
+  .hover\:border {
+    &:hover {
+      @media (hover: hover) {
+        border-style: var(--tw-border-style);
+        border-width: 1px;
+      }
+    }
+  }
+  .hover\:bg-gray-300 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-300);
+      }
+    }
+  }
+  .hover\:bg-grey {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-grey);
+      }
+    }
+  }
   .hover\:bg-white {
     &:hover {
       @media (hover: hover) {
@@ -837,10 +971,38 @@
       }
     }
   }
+  .hover\:text-\[\#0000FF\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #0000FF;
+      }
+    }
+  }
+  .hover\:text-\[\#3F0200\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #3F0200;
+      }
+    }
+  }
+  .hover\:text-\[\#11C3FF\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #11C3FF;
+      }
+    }
+  }
   .hover\:text-black {
     &:hover {
       @media (hover: hover) {
         color: var(--color-black);
+      }
+    }
+  }
+  .hover\:text-white {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-white);
       }
     }
   }
@@ -874,9 +1036,14 @@
       width: fit-content;
     }
   }
-  .md\:scroll-mt-14 {
+  .md\:scroll-mt-\[50vh\] {
     @media (width >= 48rem) {
-      scroll-margin-top: calc(var(--spacing) * 14);
+      scroll-margin-top: 50vh;
+    }
+  }
+  .md\:scroll-mt-\[calc\(50vh-30px\)\] {
+    @media (width >= 48rem) {
+      scroll-margin-top: calc(50vh - 30px);
     }
   }
   .md\:flex-col {
@@ -897,11 +1064,6 @@
   .md\:p-3 {
     @media (width >= 48rem) {
       padding: calc(var(--spacing) * 3);
-    }
-  }
-  .md\:pt-\[300px\] {
-    @media (width >= 48rem) {
-      padding-top: 300px;
     }
   }
   .md\:text-lg {
@@ -1056,7 +1218,52 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-backdrop-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-sepia {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ease {
   syntax: "*";
   inherits: false;
 }
@@ -1109,7 +1316,18 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
+      --tw-backdrop-blur: initial;
+      --tw-backdrop-brightness: initial;
+      --tw-backdrop-contrast: initial;
+      --tw-backdrop-grayscale: initial;
+      --tw-backdrop-hue-rotate: initial;
+      --tw-backdrop-invert: initial;
+      --tw-backdrop-opacity: initial;
+      --tw-backdrop-saturate: initial;
+      --tw-backdrop-sepia: initial;
       --tw-duration: initial;
+      --tw-ease: initial;
       --tw-scale-x: 1;
       --tw-scale-y: 1;
       --tw-scale-z: 1;
